--- a/templates/establishment/rssList.html.twig
+++ b/templates/establishment/rssList.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}PapyFactice - Liste des résultats{% endblock %}
+{% block title %}PapyFactice - Liste des Résidence Services Seniors{% endblock %}
 
 {% block body %}
 <style>
@@ -14,15 +14,15 @@
 </style>
 
 <div class="example-wrapper">
-    <h1 class="text-center">Liste des résultats ({{ establishments|length }})</h1>
+    <h1 class="text-center">Liste des Résidence Services Seniors ({{ establishments|length }})</h1>
     
     <p>Trier :</p>
     <ul>
         <li>
-            <a href="{{ path('app_establishment_ehpad')}}">EHPAD</a>
+            <a href="{{ path('app_establishment')}}">Tous les résultats</a>
         </li>
         <li>
-            <a href="{{ path('app_establishment_rss')}}">Résidence Services Seniors</a>
+            <a href="{{ path('app_establishment_ehpad')}}">EHPAD</a>
         </li>
     </ul>
 
