--- a/templates/establishment/index.html.twig
+++ b/templates/establishment/index.html.twig
@@ -15,7 +15,11 @@
 
 <div class="example-wrapper">
     <h1 class="text-center">Liste des résultats ({{ establishments|length }})</h1>
+
+    <p>Rechercher :</p>
     
+    {{ form(form) }}
+
     <p>Trier :</p>
     <ul>
         <li>
